Added an admin panel for the memes

--- a/maintenance.html
+++ b/maintenance.html
@@ -3,7 +3,7 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>SpaceGameDev's Website</title>
-  <link rel="shortcut icon" type="image/ico" href="images\SGDProfileImageLightNew1Round.png"/>
+  <link rel="shortcut icon" type="image/ico" href="images\sgdprofileimageroundedcorners.png"/>
   <link rel="stylesheet" href="css\maintenance.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -12,15 +12,12 @@
   <body>
     <section class="content">
       <br><br><br>
-      <img class="avatar" src="sgdprofileimageroundedcorners.png" width="256px">
+      <img class="avatar" src="images/sgdprofileimageroundedcorners.png" width="256px">
       <br><br>
     <p>  
-This website is currently undergoing maintenance. It will be back online eventually once the new website is complete.
+This website is currently undergoing maintenance. It will be back online eventually once the maintenance is complete.
     </p>
     </section>
-    <!-- Cloudflare Web Analytics -->
-    <script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "c4eacadc596344a8b26ac4d782a9cba2"}'></script>
-    <!-- End Cloudflare Web Analytics -->
     <script src="https://challenges.cloudflare.com/turnstile/v0/api.js" async defer></script>
   </body>
 </html>
