--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Orbitron&display=swap" rel="stylesheet">
   </head>
   <body>
+    <script src="https://challenges.cloudflare.com/turnstile/v0/api.js" async defer></script>
     <section class="content">
     <!-- Detect device type and redirect to mobile site -->
     <script>
@@ -29,8 +30,8 @@
     <p>
       <br><br><br><br><br><br><br><br>
 Loading...
+<div class="cf-turnstile" data-sitekey="0x4AAAAAAAAndkcAZaRnyvWq" data-callback="javascriptCallback"></div>
     </p>
     </section>
-    <script src="https://challenges.cloudflare.com/turnstile/v0/api.js" async defer></script>
   </body>
 </html>
