--- a/index.html
+++ b/index.html
@@ -34,13 +34,13 @@
     setscreensize_set()
     }
     </script>
-    <!-- End detect device type detection -->
+    <!-- End detect device type detection --><!--
 
     <p>
       <br><br><br><br><br><br><br><br>
 Loading...
 <div class="cf-turnstile" data-sitekey="0x4AAAAAAAAndkcAZaRnyvWq" data-callback="javascriptCallback"></div>
-    </p>
+    </p>-->
     </section>
   </body>
 </html>
