--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
 
     <p>
       <br><br><br><br><br><br><br><br>
-Loading...
+Loading...-->
 <div class="cf-turnstile" data-sitekey="0x4AAAAAAAAndkcAZaRnyvWq" data-callback="javascriptCallback"></div>
-    </p>-->
+    </p>
     </section>
   </body>
 </html>
