Reset Loading Page

--- a/index.html
+++ b/index.html
@@ -11,14 +11,6 @@
   <link href="https://fonts.googleapis.com/css2?family=Orbitron&display=swap" rel="stylesheet">
   </head>
   <body>
-    <script src="https://challenges.cloudflare.com/turnstile/v0/api.js?onload=onloadTurnstileCallback" async defer>
-      window.onloadTurnstileCallback = function () {
-    turnstile.render('#cf-turnstile', {
-        sitekey: '<0x4AAAAAAAAndkcAZaRnyvWq>',
-        callback: function(token) {
-            console.log(`Challenge Success ${token}`);
-        },
-    });
 };
     </script>
     <section class="content">
@@ -34,12 +26,10 @@
     setscreensize_set()
     }
     </script>
-    <!-- End detect device type detection --><!--
-
+    <!-- End detect device type detection -->
     <p>
       <br><br><br><br><br><br><br><br>
-Loading...-->
-<div class="cf-turnstile" data-sitekey="0x4AAAAAAAAndkcAZaRnyvWq" data-callback="javascriptCallback"></div>
+Loading...
     </p>
     </section>
   </body>
