Update Home Visuals

--- a/home.html
+++ b/home.html
@@ -142,7 +142,7 @@
       </div>
       <div class="cf-attrib">
         <p class="cf-attrib-text">
-            Pages and DNS by Cloudflare
+            Web Performance and Security by Cloudflare
         </p>
         <br>
         <a href="https://pages.cloudflare.com"><img src="images\logos\cloudflarelogo.svg" width="40%" class="cf-logo-bottom"></a>
