Fixed Font Display on Chromium Browsers

--- a/home.html
+++ b/home.html
@@ -6,14 +6,13 @@
     <title>Home - SpaceGameDev's Website</title>
     <link rel="shortcut icon" type="image/ico" href="images\sgdprofileimageround.png"/>
     <link rel="stylesheet" href="css\home.css">
-    <!-- Start - Google Fonts and Icons Preconnects-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet"> 
-    <!-- End - Google Fonts and Icons Preconnects-->
-  </head>
-
+    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@700&display=swap" rel="stylesheet">
+    </head>
   <body>
+
+
 
         <!-- Detect device type and redirect to mobile site -->
         <script>
@@ -90,7 +89,7 @@
     <!-- Start About Section -->
     <section class="about-me">
       <div class="about-me-header">
-        <p><br>
+        <p>
           About
         </p>
       </div>
