--- a/home.html
+++ b/home.html
@@ -10,7 +10,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@700&display=swap" rel="stylesheet">
     </head>
-  <body>
+  <body><!--Test-->
         <!-- Detect device type and redirect to mobile site -->
         <script>
           // Create a function for setting a variable value
