Added Social Links

--- a/home.html
+++ b/home.html
@@ -92,7 +92,7 @@
       </div>
       <div class="about-me-desc">
         <p><br>
-            I am a student and hobbyist game developer from the United States. I have experience in making mods for games such as Satisfactory (which I publish on <a href="https://ficsit.app" style="color: #28a3e9">https://ficsit.app</a>) and making 3D art in Blender. I am also working on a game in Unreal Engine 5 to learn the software necessary to make video games. My main interests are space exploration, game design, and digital art.
+            I am a student and hobbyist game developer from the United States. I have experience in making mods for games such as Satisfactory (which I publish on <a href="https://ficsit.app/user/5GqLMHyzA3myPG" style="color: #28a3e9">https://ficsit.app</a>) and making 3D art in Blender. I am also working on a game in Unreal Engine 5 to learn the software necessary to make video games. My main interests are space exploration, game design, and digital art.
         </p>
 
       </div>
@@ -139,6 +139,28 @@
       </p>
     </section>
     <!-- End Contact Section -->
+
+    <hr class="vert-border-medium01">
+
+    <!-- Start Social Links Section -->
+
+    <section class="socials">
+      <br>
+      <p class="about-me-header">
+          My Socials
+      </p>
+      <center>
+      <a href="https://github.com/SpaceGameDev568"><img src="images\logos\githublogo.svg" title="GitHub" class="social-icon"></a>
+      <a href="https://youtube.com/@spacegamedev"><img src="images\logos\youtubelogo.png" title="Youtube" class="social-icon"></a>
+      <a href="https://https://www.twitch.tv/spacegamedev568"><img src="images\logos\twitchlogo.png" title="Twitch" class="social-icon"></a>
+      <a href="https://twitter.com/SpaceGameDev568"><img src="images\logos\twitterlogo.svg" title="Twitter" class="social-icon"></a>
+      <a href="https://steamcommunity.com/id/spacegamedev/"><img src="images\logos\steamlogo.png" title="Steam Profile" class="social-icon"></a>
+      <a href="https://trello.com/u/spacegamedev568/activity"><img src="images\logos\trellologo.png" title="Trello" class="social-icon"></a>
+      <a href="https://ficsit.app/user/5GqLMHyzA3myPG"><img src="images\logos\smrlogo.webp" title="Satisfactory Mod Repository" class="social-icon"></a>
+      </center>
+    </section>
+
+    <!-- End Social Links Section -->
 
     <!-- Start Footer Section -->
     <section class="footer">
