--- a/home.html
+++ b/home.html
@@ -3,7 +3,7 @@
 
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home - SpaceGameDev's Website</title>
+    <title>SpaceGameDev's Website</title>
     <link rel="shortcut icon" type="image/ico" href="images\sgdprofileimageround.png"/>
     <link rel="stylesheet" href="css\home.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -152,7 +152,7 @@
       <center>
       <a href="https://github.com/SpaceGameDev568"><img src="images\logos\githublogo.svg" title="GitHub" class="social-icon"></a>
       <a href="https://youtube.com/@spacegamedev"><img src="images\logos\youtubelogo.png" title="Youtube" class="social-icon"></a>
-      <a href="https://https://www.twitch.tv/spacegamedev568"><img src="images\logos\twitchlogo.png" title="Twitch" class="social-icon"></a>
+      <a href="https://www.twitch.tv/spacegamedev568"><img src="images\logos\twitchlogo.png" title="Twitch" class="social-icon"></a>
       <a href="https://twitter.com/SpaceGameDev568"><img src="images\logos\twitterlogo.svg" title="Twitter" class="social-icon"></a>
       <a href="https://steamcommunity.com/id/spacegamedev/"><img src="images\logos\steamlogo.png" title="Steam Profile" class="social-icon"></a>
       <a href="https://trello.com/u/spacegamedev568/activity"><img src="images\logos\trellologo.png" title="Trello" class="social-icon"></a>
