--- a/home.html
+++ b/home.html
@@ -153,7 +153,7 @@
       <a href="https://github.com/SpaceGameDev568"><img src="images\logos\githublogo.svg" title="GitHub" class="social-icon"></a>
       <a href="https://youtube.com/@spacegamedev"><img src="images\logos\youtubelogo.png" title="Youtube" class="social-icon"></a>
       <a href="https://www.twitch.tv/spacegamedev568"><img src="images\logos\twitchlogo.png" title="Twitch" class="social-icon"></a>
-      <a href="https://twitter.com/SpaceGameDev568"><img src="images\logos\twitterlogo.svg" title="Twitter" class="social-icon"></a>
+      <!-- Disabled <a href="https://twitter.com/SpaceGameDev568"><img src="images\logos\twitterlogo.svg" title="Twitter" class="social-icon"></a> -->
       <a href="https://steamcommunity.com/id/spacegamedev/"><img src="images\logos\steamlogo.png" title="Steam Profile" class="social-icon"></a>
       <a href="https://trello.com/u/spacegamedev568/activity"><img src="images\logos\trellologo.png" title="Trello" class="social-icon"></a>
       <a href="https://ficsit.app/user/5GqLMHyzA3myPG"><img src="images\logos\smrlogo.webp" title="Satisfactory Mod Repository" class="social-icon"></a>
