--- a/home.html
+++ b/home.html
@@ -19,7 +19,7 @@
             window.location.href = url;
           }
     
-        if (/Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent)) {
+        if (/Android|webOS|iPhone|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent)) {
         setscreensize_set()
         }
         </script>
