Updated some text and added a new svg logo

--- a/home.html
+++ b/home.html
@@ -30,8 +30,7 @@
       </div>
       <div class="logo">
       <br>
-      SpaceGameDev
-      </div>
+      <img src="images/monochrome-logo-large.svg" width="300px">
     </section>
     <!-- End Header Section-->
 
@@ -92,7 +91,7 @@
       </div>
       <div class="about-me-desc">
         <p><br>
-            I am a student and hobbyist game developer from the United States. I have experience in making mods for games such as Satisfactory (which I publish on <a href="https://ficsit.app/user/5GqLMHyzA3myPG" style="color: #28a3e9">https://ficsit.app</a>) and making 3D art in Blender. I am also working on a game in Unreal Engine 5 to learn the software necessary to make video games. My main interests are space exploration, game design, and digital art.
+            I am a student and hobbyist game developer from the United States. I have experience in making mods for games such as Satisfactory (which I publish on <a href="https://ficsit.app/user/5GqLMHyzA3myPG" style="color: #28a3e9">ficsit.app</a>) and making 3D art in Blender. I am also working on a game in Unreal Engine 5 to learn the software necessary to make video games. My main interests are space exploration, game design, and digital art.
         </p>
 
       </div>
@@ -167,7 +166,7 @@
       <div class="footertext1">
         <br>
         <p>
-           Copyright © 2023 SpaceGameDev568. All Rights Reserved.<br> The GitHub repository for this website can be found <a href="https://github.com/SpaceGameDev568/spacegamedev.com" style="color:#28a3e9">here</a>.
+           Copyright © 2023 SpaceGameDev568. All Rights Reserved.<br> This website is an open source project, the repository for which can be found <a href="https://github.com/SpaceGameDev568/spacegamedev.com" style="color:#28a3e9">here</a>.
         </p>
         <br>
       </div>
