Fixed logo display issue

--- a/home.html
+++ b/home.html
@@ -30,7 +30,7 @@
       </div>
       <div class="logo">
       <br>
-      <img src="images/monochrome-logo-large.svg" width="300px">
+      <img src="images/monochrome-logo-large.png" width="300px">
     </section>
     <!-- End Header Section-->
 
