Updated contact email address to my professional domain email.

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
         If you would like to inquire about my work or need to contact me for any reason, please email me or reach out to me on Discord.
       </p><br><br><br><br><br><br><br><br><br><br><br><br>
       <p class="contact-info">
-        Email: spacegamedev568@gmail.com
+        Email: space@spacegamedev.com
         <br><br>
         Discord: SpaceGameDev568 #0596
       </p>
