--- a/maintenance.html
+++ b/maintenance.html
@@ -15,8 +15,7 @@
       <img class="avatar" src="images/sgdprofileimageroundedcorners.png" width="256px">
       <br><br>
     <p>  
-This website is currently undergoing maintenance. It will be back online eventually once the maintenance is complete.
-    </p>
+This website is currently undergoing maintenance.<br> It will be back online eventually once the maintenance is complete.
     </section>
     <script src="https://challenges.cloudflare.com/turnstile/v0/api.js" async defer></script>
   </body>
