Finished asset server links

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SpaceGameDev's Website</title>
-    <link rel="shortcut icon" type="image/ico" href="images\sgdprofileimageround.png"/>
+    <link rel="shortcut icon" type="image/ico" href="https://assets.spacegamedev.com/images/sgd-logo-round.png"/>
     <link rel="stylesheet" href="css\home.css">
     <link rel="preconnect" href="https://assets.spacegamedev.com"/>
     <link rel="preconnect" href="https://services.spacegamedev.com"/>
@@ -112,7 +112,7 @@
     <!-- Start Apps Section -->
     <section class="apps">
       <br><br><br>
-      <center><img src="images\ui\apps.png"></center>
+      <center><img src="https://assets.spacegamedev.com/images/ui/apps.png"></center>
     </section>
     <!-- End Apps Section -->
 
@@ -124,7 +124,7 @@
       <p class="about-me-header">
         Projects
       </p>
-      <center><a href="https://ficsit.app/mod/Factory_Prop_Mod"><img src="images\ui\websitecardfprop.png"></a></center>
+      <center><a href="https://ficsit.app/mod/Factory_Prop_Mod"><img src="https://assets.spacegamedev.com/images/ui/websitecardfprop.png"></a></center>
     </section>
     <!-- End Projects Section -->
 
@@ -157,13 +157,13 @@
           My Socials
       </p>
       <center>
-      <a href="https://github.com/SpaceGameDev568"><img src="images\logos\githublogo.svg" title="GitHub" class="social-icon"></a>
-      <a href="https://youtube.com/@spacegamedev"><img src="images\logos\youtubelogo.png" title="Youtube" class="social-icon"></a>
-      <a href="https://www.twitch.tv/spacegamedev568"><img src="images\logos\twitchlogo.png" title="Twitch" class="social-icon"></a>
-      <!-- Disabled <a href="https://twitter.com/SpaceGameDev568"><img src="images\logos\twitterlogo.svg" title="Twitter" class="social-icon"></a> -->
-      <a href="https://steamcommunity.com/id/spacegamedev/"><img src="images\logos\steamlogo.png" title="Steam Profile" class="social-icon"></a>
-      <a href="https://trello.com/u/spacegamedev568/activity"><img src="images\logos\trellologo.png" title="Trello" class="social-icon"></a>
-      <a href="https://ficsit.app/user/5GqLMHyzA3myPG"><img src="images\logos\smrlogo.webp" title="Satisfactory Mod Repository" class="social-icon"></a>
+      <a href="https://github.com/SpaceGameDev568"><img src="https://assets.spacegamedev.com/images/logos/githublogo.svg" title="GitHub" class="social-icon"></a>
+      <a href="https://youtube.com/@spacegamedev"><img src="https://assets.spacegamedev.com/images/logos/youtubelogo.png" title="Youtube" class="social-icon"></a>
+      <a href="https://www.twitch.tv/spacegamedev568"><img src="https://assets.spacegamedev.com/images/logos/twitchlogo.png" title="Twitch" class="social-icon"></a>
+      <!-- Disabled <a href="https://twitter.com/SpaceGameDev568"><img src="https://assets.spacegamedev.com/images/logos/twitterlogo.svg" title="Twitter" class="social-icon"></a> -->
+      <a href="https://steamcommunity.com/id/spacegamedev/"><img src="https://assets.spacegamedev.com/images/logos/steamlogo.png" title="Steam Profile" class="social-icon"></a>
+      <a href="https://trello.com/u/spacegamedev568/activity"><img src="https://assets.spacegamedev.com/images/logos/trellologo.png" title="Trello" class="social-icon"></a>
+      <a href="https://ficsit.app/user/5GqLMHyzA3myPG"><img src="https://assets.spacegamedev.com/images/logos/smrlogo.webp" title="Satisfactory Mod Repository" class="social-icon"></a>
       </center>
     </section>
 
@@ -183,7 +183,7 @@
             Web Performance and Security by Cloudflare
         </p>
         <br>
-        <a href="https://pages.cloudflare.com"><img src="images\logos\cloudflarelogo.svg" width="40%" class="cf-logo-bottom"></a>
+        <a href="https://pages.cloudflare.com"><img src="https://assets.spacegamedev.com/images/logos/cloudflarelogo.svg" width="40%" class="cf-logo-bottom"></a>
       </div>
     </section>
     <!-- End Footer Section -->
