--- a/Support.html
+++ b/Support.html
@@ -13,19 +13,6 @@
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@700&display=swap" rel="stylesheet">-->
   </head>
     <body>
-      <!-- Detect device type and redirect to mobile site -->
-      <script>
-        // Create a function for setting a variable value
-        function setscreensize_set() {
-          let url = "https://mobile.spacegamedev.com";
-          window.location.href = url;
-        }
-  
-      if (/Android|webOS|iPhone|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent)) {
-      setscreensize_set()
-      }
-      </script>
-      <!-- End detect device type detection -->
     <!-- Start Header Section -->
     <section class="header">
       <center>
@@ -67,7 +54,7 @@
       <br class="br-1vw">
       <div class="intro">
         <p>
-          Hi, I'm SpaceGameDev
+          This page is a work in progress.
         </p>
       </div>
       <br class="br-1vw">
@@ -157,7 +144,6 @@
       <br class="br-1vw">
       <center>
       <a href="https://github.com/SpaceGameDev568"><img src="https://assets.spacegamedev.com/images/logos/githublogo.svg" title="GitHub" class="social-icon"></a>
-      <a href="https://www.linkedin.com/in/jesse-hodgson-22aba626b/"><img src="https://assets.spacegamedev.com/images/logos/linkedin-logo.png" title="LinkedIn" class="social-icon"></a>
       <a href="https://youtube.com/@spacegamedev"><img src="https://assets.spacegamedev.com/images/logos/youtubelogo.png" title="Youtube" class="social-icon"></a>
       <a href="https://www.twitch.tv/spacegamedev568"><img src="https://assets.spacegamedev.com/images/logos/twitchlogo.png" title="Twitch" class="social-icon"></a>
       <!-- Disabled <a href="https://twitter.com/SpaceGameDev568"><img src="https://assets.spacegamedev.com/images/logos/twitterlogo.svg" title="Twitter" class="social-icon"></a> -->
