Added Copyright Notices

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-
+  <!-- Copyright (©) 2022 - 2023  Jesse Hodgson. All Rights Reserved -->
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SpaceGameDev's Website</title>
@@ -159,7 +159,7 @@
       <a href="https://github.com/SpaceGameDev568"><img src="https://assets.spacegamedev.com/images/logos/githublogo.svg" title="GitHub" class="social-icon"></a>
       <a href="https://www.linkedin.com/in/jesse-hodgson-22aba626b/"><img src="https://assets.spacegamedev.com/images/logos/linkedin-logo.png" title="LinkedIn" class="social-icon"></a>
       <a href="https://youtube.com/@spacegamedev"><img src="https://assets.spacegamedev.com/images/logos/youtubelogo.png" title="Youtube" class="social-icon"></a>
-      <a href="https://www.twitch.tv/spacegamedev568"><img src="https://assets.spacegamedev.com/images/logos/twitchlogo.png" title="Twitch" class="social-icon"></a>
+      <!--<a href="https://www.twitch.tv/spacegamedev568"><img src="https://assets.spacegamedev.com/images/logos/twitchlogo.png" title="Twitch" class="social-icon"></a>-->
       <!-- Disabled <a href="https://twitter.com/SpaceGameDev568"><img src="https://assets.spacegamedev.com/images/logos/twitterlogo.svg" title="Twitter" class="social-icon"></a> -->
       <a href="https://steamcommunity.com/id/spacegamedev/"><img src="https://assets.spacegamedev.com/images/logos/steamlogo.png" title="Steam Profile" class="social-icon"></a>
       <a href="https://trello.com/u/spacegamedev568/activity"><img src="https://assets.spacegamedev.com/images/logos/trellologo.png" title="Trello" class="social-icon"></a>
