--- a/maintenance.html
+++ b/maintenance.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+<!-- Copyright (©) 2022 - 2023  Jesse Hodgson. All Rights Reserved -->
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>SpaceGameDev's Website</title>
