Updated to Webp format

--- a/maintenance.html
+++ b/maintenance.html
@@ -4,22 +4,17 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>SpaceGameDev's Website</title>
-  <link rel="shortcut icon" type="image/ico" href="https://assets.spacegamedev.com/images/sgd-logo-round.png"/>
+  <link rel="shortcut icon" type="image/ico" href="https://assets.spacegamedev.com/images\webp\sgd-logo-round.webp"/>
   <link rel="stylesheet" href="css\maintenance.css">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link rel="preconnect" href="https://assets.spacegamedev.com"/>
-  <link rel="preconnect" href="https://services.spacegamedev.com"/>
-  <link href="https://fonts.googleapis.com/css2?family=Orbitron&display=swap" rel="stylesheet">
   </head>
   <body>
     <section class="content">
       <br><br><br>
-      <img class="avatar" src="https://assets.spacegamedev.com/images/sgd-logo.png">
+      <img class="avatar" src="https://assets.spacegamedev.com/images\webp\sgd-logo.webp">
       <br><br>
     <p>  
 This website is currently undergoing maintenance.<br> It will be back online eventually once the maintenance is complete.
     </section>
-    <script src="https://challenges.cloudflare.com/turnstile/v0/api.js" async defer></script>
   </body>
 </html>
