--- a/admin.html
+++ b/admin.html
@@ -4,13 +4,9 @@
   <!-- Change "url" to maintenance.html while site is down and back to home.html when done-->
   <meta http-equiv = "refresh" content = "10; url = maintenance.html" />
   <title>SpaceGameDev's Website</title>
-  <link rel="shortcut icon" type="image/ico" href="https://assets.spacegamedev.com/images/sgd-logo-round.png"/>
+  <link rel="shortcut icon" type="image/ico" href="https://assets.spacegamedev.com/images\webp\sgd-logo-round.webp"/>
   <link rel="stylesheet" href="css\maintenance.css">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link rel="preconnect" href="https://assets.spacegamedev.com"/>
-  <link rel="preconnect" href="https://services.spacegamedev.com"/>
-  <link href="https://fonts.googleapis.com/css2?family=Orbitron&display=swap" rel="stylesheet">
   </head>
   <body>
     <section class="content">
