--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html>
   <!-- Copyright (©) 2022 - 2023 Jesse Hodgson. All Rights Reserved -->
-  <head><!-- Never Gonna Give You up...-->
-    <meta http-equiv = "refresh" content = "2; url = https://www.youtube.com/watch?v=dQw4w9WgXcQ" />
+  <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SpaceGameDev's Website</title>
     <link rel="shortcut icon" type="image/ico" href="https://assets.spacegamedev.com/images\webp\sgd-logo-round.webp"/>
-    <link rel="preload" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" />
     <link rel="stylesheet" href="css\home.css">
     <link rel="preconnect" href="https://assets.spacegamedev.com"/>
   </head>
