Testing new design

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
   <!-- End Head, Start Body -->
   <body>
-    <!-- Detect device type and redirect to mobile site -->
+    <!-- Detect device type and redirect to mobile site --><!--
     <script>
 
       // Create a function for setting a variable value
@@ -23,10 +23,10 @@
       setscreensize_set()
       }
 
-    </script>
+    </script>-->
     <!-- End detect device type detection -->
 
-    <!-- Google tag (gtag.js) -->
+    <!-- Google tag (gtag.js) https://analytics.google.com/analytics/web/#/p360946171/reports/intelligenthome -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-1YLEB435KG"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
@@ -38,12 +38,12 @@
 
 
     <!-- Start Header Section -->
-    <section class="header">
+    <div class="header">
+      <a href="nothing"> <img src="https://assets.spacegamedev.com/images/ui/hamburger-menu.svg" class="hamburger-menu"></a>
       <center>
-        <br>
-        <img class="header-logo" src="https://assets.spacegamedev.com/images\webp\monochrome-logo-large.webp">
+      <img class="header-logo" src="https://assets.spacegamedev.com/images/webp/monochrome-logo-large.webp">
       </center>
-    </section>
+    </div>
     <!-- End Header Section-->
 
 
@@ -77,129 +77,23 @@
 
     <!-- Start First Section -->
     <section class="bio-short">
-      <br class="br-2vw">
+      <center>
+      <br>
       <img class="sgd-logo" src="https://assets.spacegamedev.com/images\webp\sgd-logo.webp">
-      <br class="br-1vw">
+      <br>
       <div class="intro">
         <p>
-          Hi, I'm SpaceGameDev
+          Hi there!
         </p>
       </div>
-      <br class="br-1vw">
+      <br>
       <div class="about-short">
         <p>
-          I'm a hobbyist developer and digital artist from the United States specializing in programming and 3D art.
+          I'm Jesse Hodgson, more commonly known by my alias: SpaceGameDev. I'm a Software Developer from Charlotte, North Carolina, in the United States.
         </p>
-      </div><br class="br-1vw">
-      <section class="vert-border-section"><center><hr class="vert-border"></center></section>
+      </div><br></center>
     </section>
     <!-- Start First Section -->
-
-
-    <!-- Start About Section -->
-    <section class="about-me">
-      <br class="br-1vw">
-      <div class="about-me-header">
-        <p>
-          About
-        </p>
-      </div>
-      <div class="about-me-desc">
-        <p><br class="br-1vw">
-            I am a student and hobbyist game developer from the United States. I have experience in making mods for games such as Satisfactory (which I publish on <a href="https://ficsit.app/user/5GqLMHyzA3myPG" style="color: #28a3e9">ficsit.app</a>) and making 3D art in Blender. I am also working on a game in Unreal Engine 5 to learn the software necessary to make video games. My main interests are space exploration, game design, and digital art.
-        </p>
-      </div>
-    </section>
-    <!-- End About Section -->
-
-
-    <section class="vert-border-section"><center><hr class="vert-border"></center></section>
-
-
-    <!-- Start Apps Section -->
-    <section class="apps">
-      <br class="br-1vw">
-      <center><img class="apps-img" src="https://assets.spacegamedev.com/images\webp\ui\apps.webp"></center>
-      <br class="br-1vw">
-    </section>
-    <!-- End Apps Section -->
-
-    <section class="vert-border-section"><center><hr class="vert-border"></center></section>
-
-    <!-- Start Projects Section-->
-    <section class="projects">
-      <br class="br-1vw">
-      <p class="about-me-header">
-        Projects
-      </p><br class="br-1vw">
-      <center><a href="https://ficsit.app/mod/Factory_Prop_Mod"><img class="fprop-project-card" src="https://assets.spacegamedev.com/images\webp\ui\websitecardfprop.webp"></a></center>
-      <br class="br-1vw">
-    </section>
-    
-
-    <!-- End Projects Section -->
-
-    <section class="vert-border-section"><center><hr class="vert-border"></center></section>
-
-    <!-- Start Contact Section -->
-    <section class="contact">
-      <br class="br-1vw">
-      <p class="about-me-header">
-          Contact
-      </p>
-      <br class="br-1vw">
-      <p class="contact-desc">
-        If you would like to inquire about my work or need to contact me for any reason, please email me or reach out to me on Discord.
-        <br class="br-4vw">
-        Email: space@spacegamedev.com
-        <br class="br-4vw">
-        Discord: SpaceGameDev568 #0596
-      </p>
-    </section>
-    <!-- End Contact Section -->
-
-    <section class="vert-border-section"><center><hr class="vert-border"></center></section>
-
-    <!-- Start Social Links Section -->
-
-    <section class="socials">
-      <br class="br-1vw">
-      <p class="about-me-header">
-          My Socials
-      </p>
-      <br class="br-1vw">
-      <center>
-      <a href="https://github.com/SpaceGameDev568"><img src="https://assets.spacegamedev.com/images/logos/githublogo.svg" title="GitHub" class="social-icon"></a>
-      <a href="https://www.linkedin.com/in/jesse-hodgson-22aba626b/"><img src="https://assets.spacegamedev.com/images/logos/linkedin-logo.png" title="LinkedIn" class="social-icon"></a>
-      <a href="https://youtube.com/@spacegamedev"><img src="https://assets.spacegamedev.com/images/logos/youtubelogo.png" title="Youtube" class="social-icon"></a>
-      <!--<a href="https://www.twitch.tv/spacegamedev568"><img src="https://assets.spacegamedev.com/images/logos/twitchlogo.png" title="Twitch" class="social-icon"></a>-->
-      <!-- Disabled <a href="https://twitter.com/SpaceGameDev568"><img src="https://assets.spacegamedev.com/images/logos/twitterlogo.svg" title="Twitter" class="social-icon"></a> -->
-      <a href="https://steamcommunity.com/id/spacegamedev/"><img src="https://assets.spacegamedev.com/images/logos/steamlogo.png" title="Steam Profile" class="social-icon"></a>
-      <a href="https://trello.com/u/spacegamedev568/activity"><img src="https://assets.spacegamedev.com/images/logos/trellologo.png" title="Trello" class="social-icon"></a>
-      <a href="https://ficsit.app/user/5GqLMHyzA3myPG"><img src="https://assets.spacegamedev.com/images/logos/smrlogo.webp" title="Satisfactory Mod Repository" class="social-icon"></a>
-      </center>
-    </section>
-
-    <!-- End Social Links Section -->
-
-    <!-- Start Footer Section -->
-    <section class="footer">
-      <div class="footertext1">
-        <br class="br-1vw">
-        <p>
-           Copyright © 2023 SpaceGameDev568. All Rights Reserved.<br> This website is an open source project, the repository for which can be found <a href="https://github.com/SpaceGameDev568/spacegamedev.com" style="color:#28a3e9">here</a>.
-        </p>
-        <br class="br-1vw">
-      </div>
-      <div class="cf-attrib">
-        <p class="cf-attrib-text">
-            Web Performance and Security by Cloudflare
-        </p>
-        <br class="br-1vw">
-        <a href="https://pages.cloudflare.com"><img src="https://assets.spacegamedev.com/images/logos/cloudflarelogo.svg" width="40%" class="cf-logo-bottom"></a>
-      </div>
-    </section>
-    <!-- End Footer Section -->
   </body>
 
 </html>
