--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <div class="header">
       <a href="nothing"> <img src="https://assets.spacegamedev.com/images/ui/hamburger-menu.svg" class="hamburger-menu"></a>
       <center>
-      <img class="header-logo" src="https://assets.spacegamedev.com/images/webp/monochrome-logo-large.webp">
+      <img class="header-logo" src="https:\\spacegamedev-assets.pages.dev/images/webp/avatar-outline.webp">
       </center>
     </div>
     <!-- End Header Section-->
