--- a/index.html
+++ b/index.html
@@ -43,8 +43,17 @@
       <center>
       <img class="header-logo" src="https:\\spacegamedev-assets.pages.dev/images/webp/avatar-outline.webp">
       </center>
+      <button class="btn-toggle">Toggle Theme</button>
     </div>
     <!-- End Header Section-->
+
+    <script>
+      const btn = document.querySelector(".btn-toggle");
+
+    btn.addEventListener("click", function () {
+      document.body.classList.toggle("light");
+    });
+    </script>
 
 
     <!-- Back to Top button copied from https://www.w3schools.com/howto/howto_js_scroll_to_top.asp -->
@@ -80,7 +89,7 @@
       <center>
       <br>
       <img class="sgd-logo" src="https://assets.spacegamedev.com/images\webp\sgd-logo.webp">
-      <br>
+      <br><br>
       <div class="intro">
         <p>
           Hi there!
@@ -89,11 +98,12 @@
       <br>
       <div class="about-short">
         <p>
-          I'm Jesse Hodgson, more commonly known by my alias: SpaceGameDev. I'm a Software Developer from Charlotte, North Carolina, in the United States.
+          I'm Jesse Hodgson, more commonly known by my alias: SpaceGameDev,<br> and I'm a Software Developer from Charlotte, North Carolina, in the United States.
         </p>
       </div><br></center>
     </section>
-    <!-- Start First Section -->
+
+    <center><hr class="vertical-section-divider"></center>
   </body>
 
 </html>
